<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        android:text="@string/tvId"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/tvNombre"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvId"
        app:layout_constraintTop_toBottomOf="@+id/tvId" />

    <TextView
        android:id="@+id/tvBodega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/tvBodega"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/tvColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvBodega"
        app:layout_constraintTop_toBottomOf="@+id/tvBodega" />

    <TextView
        android:id="@+id/tvOrigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/tvOrigen"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvColor"
        app:layout_constraintTop_toBottomOf="@+id/tvColor" />

    <TextView
        android:id="@+id/tvGraduacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/tvGraduacion"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvOrigen"
        app:layout_constraintTop_toBottomOf="@+id/tvOrigen" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/tvFecha"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvGraduacion"
        app:layout_constraintTop_toBottomOf="@+id/tvGraduacion" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvId"
        app:layout_constraintStart_toEndOf="@+id/tvId"
        app:layout_constraintTop_toTopOf="@+id/tvId"
        app:layout_constraintVertical_bias="0.458"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvNombre"
        app:layout_constraintStart_toEndOf="@+id/tvNombre"
        app:layout_constraintTop_toTopOf="@+id/tvNombre"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etBodega"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvBodega"
        app:layout_constraintStart_toEndOf="@+id/tvBodega"
        app:layout_constraintTop_toTopOf="@+id/tvBodega"
        app:layout_constraintVertical_bias="0.416"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etColor"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvColor"
        app:layout_constraintStart_toEndOf="@+id/tvColor"
        app:layout_constraintTop_toTopOf="@+id/tvColor"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etOrigen"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvOrigen"
        app:layout_constraintStart_toEndOf="@+id/tvOrigen"
        app:layout_constraintTop_toTopOf="@+id/tvOrigen"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etGraduacion"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvGraduacion"
        app:layout_constraintStart_toEndOf="@+id/tvGraduacion"
        app:layout_constraintTop_toTopOf="@+id/tvGraduacion"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/tvFecha"
        app:layout_constraintStart_toEndOf="@+id/tvFecha"
        app:layout_constraintTop_toTopOf="@+id/tvFecha"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btSecAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btSecAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>